--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <div class="container">
-       <img src="/image/image-qr-code.png" alt="" />
-       <h1> Improve your front-end skills by building projects </h1>
-       <p> Scan the QR code to visit Frontend Mentor and take
+       <img class="qr-img" src="image/image-qr-code.png" alt="qr code" />
+       <h1 class="title" >Improve your front-end skills by building projects </h1>
+       <p class="text"> Scan the QR code to visit Frontend Mentor and take
          your coding skills to the next level</p>
     </div>
 </body>
